# FreeClimber

./: DESCRIPTION.rst  DectFrame.py  FreeClimber_main.py  LICENSE.txt  README.md  TUTORIAL.md  meta.yaml  pyproject.toml  setup.py
FreeClimber/: DectFrame.py  FreeClimber_gui.py  FreeClimber_gui_consolidated.py  argparse_test.py  custom_list.prc  detector.py
FreeClimber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FreeClimber/logging_test/: logging_test.py
FreeClimber/test/: clean_background_few_flies.cfg  clean_background_few_flies.filtered.csv  clean_background_few_flies.raw.csv  clean_background_few_flies.slopes.csv  results.csv
example/: example.cfg  results.csv  w1118_m_2_1.avi  w1118_m_2_1.filtered.csv  w1118_m_2_1.h264  w1118_m_2_1.mov  w1118_m_2_1.raw.csv  w1118_m_2_1.slopes.csv
example/output/: w1118_m_2_1.filtered.csv  w1118_m_2_1.raw.csv  w1118_m_2_1.slopes.csv
example_other/: clean_background_different_flies.h264  custom.prc
example_other/ex_1/: climbing_1.cfg  climbing_1.filtered.csv  climbing_1.mov  climbing_1.raw.csv  climbing_1.slopes.csv  climbing_2.cfg
example_other/ex_2/: climbing_2.cfg  climbing_2.filtered.csv  climbing_2.raw.csv  climbing_2.slopes.csv
example_other/ex_3/: climbing_3.cfg  climbing_3.filtered.csv  (+4 more)
manuscript_results/: fatigue_results.csv  longitudinal_results.csv
scripts/: FreeClimber_gui.py  FreeClimber_main.py  detector.py  gather_files.py
test/: clean_background_few_flies.cfg  clean_background_few_flies.filtered.csv  clean_background_few_flies.raw.csv  clean_background_few_flies.slopes.csv
(+10 files in other folders)
