[tool.poetry]
name = "FreeClimber"
version = "0.3.1"
description = "FreeClimber is a Python-based background subtraction, particle detector used to estimate the velocity for a group of particles moving from the bottom to the top of an image, using a local linear regression."
authors = ["Adam Spierer <https://github.com/adamspierer>"]

[tool.poetry.dependencies]
ffmpeg = "1.4"
python = "3.7.*"
matplotlib = "3.1.3"
numpy = "1.18.1"
pandas = "1.0.0"
pip = "20.0.2"
scipy = "1.4.1"
trackpy = "0.4.2"
wxPython = "4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^3.4"